# sdrf-pipelines

./: .codacy.yml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  COMMANDS.md  CONTRIBUTING.md  DYNAMIC_VERSIONING.md  Dockerfile.dev  MANIFEST.in  README.md  environment.yml  package-lock.json  package.json  parse_sdrf.py  pyproject.toml  requirements-dev.txt  requirements.txt  scm_version.py  setup.py  validate_sdrfs.py  validate_sdrfs.sh
.github/workflows/: ci.yml  conda-build.yml  pythonapp.yml  pythonpackage.yml  pythonpublish.yml  sync-sdrf-templates.yml
conda/: meta.yaml
data/ontologies/: bto.parquet  chebi.parquet  cl.parquet  clo.parquet  doid.parquet  efo.parquet  envo.parquet  hancestro.parquet  mod.parquet  mondo.parquet  ncit.parquet  pato.parquet  pride.parquet  psi-ms.parquet  uberon.parquet  unimod.parquet
docs/cli/: reference.md
docs/cli/commands/: convert-maxquant.md  convert-msstats.md  convert-normalyzerde.md  convert-openms.md  download-cache.md  split-sdrf.md  validate-sdrf.md
docs/plans/: 2026-03-07-ols-cache-optimization-design.md
recipe/: meta.yaml
scripts/: generate_cli_docs.py
sdrf_pipelines/: __init__.py  openms.py  parse_sdrf.py
sdrf_pipelines/graphical_summary/: graphical_summary.py
sdrf_pipelines/maxquant/: maxquant.py  modifications.xml  param2sdrf.yml
sdrf_pipelines/msstats/: msstats.py
sdrf_pipelines/normalyzerde/: normalyzerde.py
sdrf_pipelines/ols/: bto.parquet  chebi.parquet  cl.parquet  clo.parquet  efo-base.parquet  efo.parquet  mondo.parquet  ncit.parquet  ols.py  pato.parquet  pride.parquet  psi-ms.parquet  uberon.parquet  unimod.parquet
sdrf_pipelines/openms/: openms.py  unimod.py  unimod.xml
sdrf_pipelines/sdrf/: __init__.py  schema_loader.py  schemas.py  sdrf.py  sdrf_schema.py  specification.py  validators.py
sdrf_pipelines/sdrf/schemas/: cell_lines.yaml  default.yaml  human.yaml  minimum.yaml  nonvertebrates.yaml  plants.yaml  vertebrates.yaml
sdrf_pipelines/sdrf/validators/: __init__.py  base.py  ontology.py
sdrf_pipelines/sdrf_merge/: add_data_analysis_param.py  add_datanalysis_param.py  param2sdrf.yml
sdrf_pipelines/testdata/: sdrf.tsv  sdrf.txt  sdrf_error.tsv
sdrf_pipelines/testdata/PXD001819/: expected_experimental_design.tsv  expected_openms.tsv
sdrf_pipelines/tests/: sdrfchecker_tests.py  test_sdrfchecker.py  test_unimod.py
sdrf_pipelines/utils/: exceptions.py  utils.py
sdrf_pipelines/zooma/: ols.py  zooma.py
src/sdrf_pipelines/: __init__.py  config.py  openms.tsv  parse_sdrf.py
src/sdrf_pipelines/converters/: __init__.py  base.py
src/sdrf_pipelines/converters/diann/: constants.py  diann.py  modifications.py  plexdia.py
src/sdrf_pipelines/converters/maxquant/: maxquant.py  modifications.xml  param2sdrf.yml
src/sdrf_pipelines/converters/mhcquant/: __init__.py  constants.py  default_search_presets.tsv  mhcquant.py  utils.py
src/sdrf_pipelines/converters/msstats/: msstats.py
src/sdrf_pipelines/converters/openms/: __init__.py  constants.py  experimental_design.py  modifications.py  openms.py  unimod.py  unimod.xml  utils.py
src/sdrf_pipelines/converters/relink/: __init__.py  crosslinkers.yaml  enzymes.yaml  modifications.yaml  relink.py
src/sdrf_pipelines/maxquant/: maxquant.py
src/sdrf_pipelines/msstats/: msstats.py
src/sdrf_pipelines/ols/: ols.py
src/sdrf_pipelines/openms/: __init__.py  experimental_design.py  modifications.py  openms.py
src/sdrf_pipelines/sdrf/: __init__.py  schemas.py  sdrf.py  validators.py
src/sdrf_pipelines/sdrf/schemas/: __init__.py  cell_lines.yaml  human.yaml  models.py  registry.py  utils.py  validator.py  vertebrates.yaml
src/sdrf_pipelines/utils/: __init__.py  error_codes.py  exceptions.py  manifest.py  utils.py
tests/: conftest.py  helpers.py  test_convert_diann.py  test_convert_openms.py  test_converters_base.py  test_diann_modifications.py  test_diann_plexdia.py  test_error_codes.py  test_metabolomics_templates.py  test_mhcquant.py  test_min_columns.py  test_ols.py  test_ontology.py  test_openms.py  test_programmatic_validation.py  test_schema_loader.py  test_schema_registry.py  test_schemas_utils.py  test_sdrf.py  test_sdrfchecker.py  test_skip_ontology.py  test_typed_validators.py  test_unimod.py
tests/data/: README.md  sample.sdrf.tsv
tests/data/PXD001819/: PXD001819.sdrf.tsv  README.md
tests/data/PXD015270/: PXD015270-Sample-1.tsv
tests/data/diann/: gpf_fractions.sdrf.tsv  label_free.sdrf.tsv  label_free_design.sdrf.tsv  mtraq_3plex.sdrf.tsv  mtraq_design.sdrf.tsv  phospho.sdrf.tsv  scan_range_both.sdrf.tsv  scan_range_discrete.sdrf.tsv  scan_range_interval.sdrf.tsv  scan_range_inverted.sdrf.tsv  silac_2plex.sdrf.tsv
tests/data/erroneous/: example.sdrf.tsv  sdrf_error.tsv
tests/data/erroneous/PXD000288/: PXD000288.sdrf.tsv
tests/data/generic/: README.md  error.sdrf.tsv  quantms_dia_dotd_sample.sdrf  quantms_dia_dotd_sample_converted.sdrf  sdrf.tsv
tests/data/metabolomics/: MTBKS5.sdrf.tsv
tests/data/mhcquant/: PXD009749.sdrf.tsv  PXD012308.sdrf.tsv  test_immunopeptidomics.sdrf.tsv
tests/data/reference/: README.md
tests/data/reference/MSV000079033/: MSV000079033-Blood-Plasma-TMT10.sdrf.tsv  MSV000079033-Blood-Plasma-iTRAQ.sdrf.tsv
tests/data/reference/PDC000126/: PDC000126.sdrf.tsv
tests/data/reference/PDC000180/: PDC000180.sdrf.tsv
tests/data/reference/PXD000612/: PXD000612.sdrf.tsv
tests/data/reference/PXD001474/: PXD001474.sdrf.tsv
tests/data/reference/PXD002137/: PXD002137.sdrf.tsv
tests/data/reference/PXD004684/: PXD004684.sdrf.tsv
tests/data/reference/PXD006482/: PXD006482.sdrf.tsv
tests/data/reference/PXD008934/: PXD008934.sdrf.tsv
tests/data/reference/PXD022621/: PXD022661.sdrf.tsv
tests/data/reference/PXD022661/: PXD022661.sdrf.tsv
tests/data/reference/PXD027125/: PXD027125.sdrf.tsv
tests/data/reference/PXD030304/: PXD030304.sdrf.tsv
tests/data/reference/PXD030598/: PXD030598.sdrf.tsv
tests/data/reference/PXD034244/: PXD034244.sdrf.tsv
tests/data/reference/PXD038526/: PXD038526.sdrf.tsv
