[project]
name = "sdrf-pipelines"
dynamic = ["version"]
description = "Validate and convert SDRF files to configuration files for pipelines."
readme = "README.md"
authors = [
    { name = "BigBio Team", email = "ypriverol@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["sdrf", "python", "multiomics", "proteomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Core dependencies for structural validation and conversions
dependencies = [
    "click",
    "defusedxml",
    "numpy",
    "pandas",
    "pydantic>=2.0.0",
    "pyyaml",
]

[project.optional-dependencies]
# Ontology validation features (term lookup via OLS)
ontology = [
    "fastparquet",
    "pooch",
    "rdflib",
    "requests",
]
# All features
all = [
    "fastparquet",
    "pooch",
    "rdflib",
    "requests",
]

[project.urls]
Homepage = "https://github.com/bigbio/sdrf-pipelines"
Repository = "https://github.com/bigbio/sdrf-pipelines"

[project.scripts]
parse_sdrf = "sdrf_pipelines.parse_sdrf:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.xml", "*.tsv", "*.yaml", "*.yml"]

[tool.setuptools-scm]
# Custom version scheme that encodes branch name
version_file = "src/sdrf_pipelines/_version.py"
# Use a simpler approach - write version then parse it

[dependency-groups]
dev = [
    "fastparquet",
    "flake8",
    "mypy",
    "pooch",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-datadir",
    "rdflib",
    "requests",
]

[tool.black]
line-length = 120
target_version = ["py310","py311","py312","py313"]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
packages = ["sdrf_pipelines"]

[[tool.mypy.overrides]]
module = "fastparquet"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
